--- a/bbs/package.json
+++ b/bbs/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.4",
     "csurf": "^1.9.0",
     "express": "^4.16.2",
+    "lodash": "4.16.2",
     "mongodb": "^3.0.1",
     "mongoose": "^5.0.3",
     "mongoose-schema-extend": "^0.2.2",
